--- a/package.json
+++ b/package.json
@@ -3,11 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ag-grid-community/core": "^25.0.1",
+    "@ag-grid-community/react": "^25.0.1",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.2",
+    "ag-grid": "^18.1.2",
+    "ag-grid-community": "^25.0.1",
+    "ag-grid-enterprise": "^25.0.1",
+    "ag-grid-react": "^25.0.1",
+    "local-storage": "^2.0.0",
     "react": "^17.0.1",
+    "react-datepicker": "^3.4.1",
     "react-dom": "^17.0.1",
+    "react-dom-factories": "^1.0.2",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
